# messagerie-crypto

./: .gitignore  README.md  commandes.txt  rsa.py  sql
Messagerie_sec/backend/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
Messagerie_sec/backend/certs/: dh2048.pem  openssl.cnf  server.crt  server.key
Messagerie_sec/backend/include/: contact_handler.h  crypto.h  database.h  get_contact_requests_handler.h  handle_request_handler.h  login_handler.h  message_getter.h  message_handler.h  register_handler.h  response_sender.h  send_contact_request_handler.h  server.h  utils.h
Messagerie_sec/backend/src/: contact_handler.cpp  crypto.cpp  database.cpp  get_contact_requests_handler.cpp  handle_request_handler.cpp  login_handler.cpp  main.cpp  message_getter.cpp  message_handler.cpp  register_handler.cpp  response_sender.cpp  send_contact_request_handler.cpp  server.cpp  utils.cpp
Messagerie_sec/database/: init.sql
Messagerie_sec/frontend/: .env  package-lock.json  package.json
Messagerie_sec/frontend/src/: chat.css  chat.html  chat.js  contact.html  contact.js  index.html  main.js  preload.js  profil.html  profil_contact.css  renderer.js  style.css
myProject/: messages.html  package-lock.json  package.json  renderer.js
myProject/styles/: style.css
v2/: connexion.html  index.html  index.js  messages.html
v2/js/: messages.js
v2/styles/: messages.css
